[gd_scene load_steps=6 format=3 uid="uid://b1fiqoqxrop2b"]

[ext_resource type="ArrayMesh" uid="uid://6rsy3scfwgmc" path="res://assets/gameObjects/KayKit_DungeonRemastered_1.1_FREE/KayKit_DungeonRemastered_1.1_FREE/Assets/obj/bed_frame.obj" id="1_1hrb4"]
[ext_resource type="Script" uid="uid://bigywxkyd7awg" path="res://assets/gameObjects/bed/bed.gd" id="1_y400x"]
[ext_resource type="Theme" uid="uid://dy58d31fw2wn8" path="res://themes/text_normal.tres" id="3_d386r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y400x"]
size = Vector3(3, 1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_d386r"]
size = Vector3(1.5, 1, 3)

[node name="Bed" type="Node3D"]
script = ExtResource("1_y400x")

[node name="BedFrame" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_1hrb4")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_y400x")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_d386r")

[node name="PromptVBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Space1" type="Control" parent="PromptVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="PromptLabel" type="Label" parent="PromptVBox"]
layout_mode = 2
theme = ExtResource("3_d386r")
text = "Press E to Sleep"
horizontal_alignment = 1

[node name="Space2" type="Control" parent="PromptVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0, 0)
